--- a/ui/style.css
+++ b/ui/style.css
@@ -20,10 +20,12 @@ body {
     height: 200px;
 }
 
-.container{
+.container {
                 max-width:800px;
                 margin:0 auto;
                 color:grey;
                 font-family:arial;
-            }
-
+                padding-top:10px;
+                padding-left:30px;
+                padding-right:30px;
+}
